# domestic-finance-analytics

./: .gitignore  README.md  compose.yml  dev-requirements.txt  dev.compose.yml  manage.py  pyproject.toml
devops/services/django/: django.Dockerfile  django_entrypoint.sh
devops/services/postgres/: db-build.sql  init_db.sh  postgres.Dockerfile
devops/services/postgres/fixtures/: initial_data.json
devops/services/scrapper/: scrapper.Dockerfile  scrapper_entrypoint.sh
domestic_finance_analytics/: asgi.py  settings.py  urls.py  wsgi.py
groceries/: views.py
groceries/api/: analytics.py  groceries.py  main.py
groceries/management/commands/: scrap_colruyt_products.py
groceries/migrations/: 0001_initial.py  0002_alter_article_category.py  0002_alter_invoiceline_purchase_date.py  0003_alter_article_category.py  0003_shop_external_id.py  0004_alter_article_unit_price.py  0005_article_shop_id_alter_article_id.py
groceries/models/: __init__.py  article.py  base_model.py  invoice_line.py  shop.py
groceries/scrappers/: email_invoice_retriever.py  subscriber.py
groceries/tests/: conftest.py
groceries/tests/api/: pytest_analytics.py
groceries/utils/: preprocessing.py  scrapper.py
groceries/utils/errors/: errors.py
templates/groceries/: analytics.html  base.html
